# llm-cost-router

./: .dockerignore  .env.example  .gitattributes  .gitignore  ACCEPTANCE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: api-tests.yml  ci.yml
api/: Dockerfile  README.md  pyproject.toml
api/src/frugalroute_api/: __init__.py  app.py  config.py  errors.py  metrics.py  middleware.py  ratelimit.py  schemas.py
api/src/frugalroute_api/data/: sample_run.json
api/tests/: conftest.py  test_api_smoke.py  test_contract.py  test_errors.py  test_eval.py  test_examples.py  test_extra.py  test_hardening.py  test_health_config.py  test_ratelimit.py  test_route.py  test_route_stream.py  test_security.py
app/: .dockerignore  Dockerfile  FrugalRoute.dc.html  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  playwright.integration.config.js  security-headers.conf
app/src/: api.js  bridge.js  config.js  format.js  redirect.js
app/tests/e2e/: a11y.spec.js  fixtures.js  frontier.spec.js  perf.mjs  screenshot.mjs  single-query.spec.js  sse.js  static-server.mjs  stream.spec.js
app/tests/integration/: container-smoke.mjs  csp-check.mjs  stack.spec.js
app/tests/unit/: a11y-format.test.js  api.test.js  config.test.js  format.test.js  frontier-format.test.js  state.test.js
core/: .env.example  README.md  pyproject.toml
core/src/frugalroute/: __init__.py  azure_client.py  benchmarks.py  classifier.py  cli.py  config.py  economics.py  embed.py  examples.py  gate.py  generate.py  harness.py  llm.py  metrics.py  models.py  obs.py  prompts.py  router.py
core/src/frugalroute/data/: examples.json
core/tests/: conftest.py  test_api_smoke.py  test_azure_adapter.py  test_baselines.py  test_batch_math.py  test_breakeven.py  test_call.py  test_cascade.py  test_classifier.py  test_cli.py  test_cli_eval.py  test_cli_predictive.py  test_client.py  test_config_concurrency.py  test_cost.py  test_embed.py  test_eval_aggregation.py  test_eval_api.py  test_frontier.py  test_gate.py  test_generate.py  test_graders_gsm8k.py  test_graders_mmlu.py  test_harness.py  test_labels.py  test_loader.py  test_metrics.py  test_models.py  test_oracle.py  test_predictive_api.py  test_predictive_route.py  test_prompts.py  test_route_api.py  test_route_events.py  test_secrets_logging.py  test_security_injection.py  test_split.py  test_tiers.py
docs/: api.md  architecture.md  eval-methodology.md
eval/: README.md  run.py
eval/data/: README.md  frozen_split.json  gsm8k.jsonl  mmlu.jsonl
scripts/: acceptance_checks.py  bundle_sample.py  dev.ps1  dev.sh  gen_sample_run.py
tests/integration/: conftest.py  test_sample_bundle.py  test_stack_nokey.py
