[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frugalroute-api"
version = "0.1.0"
description = "FrugalRoute API — a thin FastAPI adapter over the frugalroute engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "pydantic>=2,<3",
    # The engine, imported in-process (no service-to-service HTTP). Installed as an
    # editable path dep alongside the api: `pip install -e core && pip install -e api`.
    "frugalroute",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/frugalroute_api"]
# Ship the bundled dev sample bundle (replaced by the real frozen run in split 10).
include = ["src/frugalroute_api/data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts Depends(...) in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.mypy]
python_version = "3.11"
files = ["src/frugalroute_api"]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "frugalroute.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "api: tests that call the live Anthropic API; auto-skipped when ANTHROPIC_API_KEY is unset",
    "azure: tests that call the live Azure OpenAI gpt-5.5 backend; auto-skipped when AZURE_OPENAI_API_KEY is unset",
]
