[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frugalroute-api"
version = "0.1.0"
description = "FrugalRoute API — a thin FastAPI adapter over the frugalroute engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "pydantic>=2,<3",
    # Settings surface (config.py). Pydantic v2 moved BaseSettings into this
    # package; declared here so a clean install (e.g. the container) has it.
    "pydantic-settings>=2.14.2,<3",
    # Security floors (split-14 dep audit; pip-audit clean above these):
    #   starlette < 1.3.1          → CVE-2026-48817/48818/54282/54283 (DoS/parsing);
    #   pydantic-settings < 2.14.2 → GHSA-4xgf-cpjx-pc3j.
    # starlette is transitive via fastapi; pinned explicitly so a clean install
    # (e.g. the container) never resolves a vulnerable version.
    "starlette>=1.3.1",
    # The engine, imported in-process (no service-to-service HTTP). Installed as an
    # editable path dep alongside the api: `pip install -e core && pip install -e api`.
    "frugalroute",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/frugalroute_api"]
# Ship the bundled dev sample bundle (replaced by the real frozen run in split 10).
include = ["src/frugalroute_api/data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts Depends(...) in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.mypy]
python_version = "3.11"
files = ["src/frugalroute_api"]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "frugalroute.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "api: tests that call the live Anthropic API; auto-skipped when ANTHROPIC_API_KEY is unset",
    "azure: tests that call the live Azure OpenAI gpt-5.5 backend; auto-skipped when AZURE_OPENAI_API_KEY is unset",
]

[tool.coverage.report]
# Single source of truth for the CI no-key coverage floor (split 12). The thin
# adapter sits at ~99%; this floor bites on a real regression without flaking.
fail_under = 96
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
