[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frugalroute"
version = "0.1.0"
description = "FrugalRoute — LLM cost-optimizing router engine (contracts, prompts, cost)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40,<2",
    "pydantic>=2,<3",
]

[project.optional-dependencies]
# Live-demo backend: the supplied key is Azure OpenAI gpt-5.5, driven through the
# Anthropic-shaped adapter in frugalroute.azure_client (imported lazily).
azure = [
    "openai>=1.30,<2",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "openai>=1.30,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/frugalroute"]
# Ship bundled package data (the demo examples) inside the wheel.
include = ["src/frugalroute/data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
python_version = "3.11"
files = ["src/frugalroute"]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "api: tests that call the live Anthropic API; auto-skipped when ANTHROPIC_API_KEY is unset",
    "azure: tests that call the live Azure OpenAI gpt-5.5 backend; auto-skipped when AZURE_OPENAI_API_KEY is unset",
]
