[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frugalroute"
version = "0.1.0"
description = "FrugalRoute — LLM cost-optimizing router engine (contracts, prompts, cost)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40,<2",
    "pydantic>=2,<3",
    # Security floor (split-14 dep audit): h11 < 0.16 → CVE-2025-43859 (request
    # smuggling). h11 is transitive via anthropic→httpx→httpcore; pinned explicitly
    # so a clean install never resolves the vulnerable version. (httpcore>=1.0.9
    # follows automatically as the first release allowing h11>=0.16.)
    "h11>=0.16",
    # Split 04 — predictive router. numpy/scikit-learn/joblib are light enough to
    # import eagerly (no key, no network); the heavy embedder (torch via
    # sentence-transformers) is the optional ``embed`` extra below, imported lazily.
    "numpy>=1.26,<3",
    "scikit-learn>=1.3,<2",
    "joblib>=1.3,<2",
]

[project.scripts]
# `frugalroute route ...` — equivalent to `python -m frugalroute.cli route ...`.
frugalroute = "frugalroute.cli:main"

[project.optional-dependencies]
# Live-demo backend: the supplied key is Azure OpenAI gpt-5.5, driven through the
# Anthropic-shaped adapter in frugalroute.azure_client (imported lazily).
azure = [
    "openai>=1.30,<2",
]
# Local-embedding backend for the predictive router (split 04). Heavy (pulls
# torch); imported lazily inside ``frugalroute.embed.get_embedder`` so the no-key
# unit path and ``import frugalroute`` never load it.
embed = [
    "sentence-transformers>=2.2,<4",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "openai>=1.30,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/frugalroute"]
# Ship bundled package data (the demo examples) inside the wheel.
include = ["src/frugalroute/data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
python_version = "3.11"
files = ["src/frugalroute"]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Untyped ML deps (split 04): sklearn/joblib ship no stubs; sentence-transformers
# is an optional, lazily-imported extra. numpy is typed and intentionally not here.
module = ["sklearn.*", "joblib.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "api: tests that call the live Anthropic API; auto-skipped when ANTHROPIC_API_KEY is unset",
    "azure: tests that call the live Azure OpenAI gpt-5.5 backend; auto-skipped when AZURE_OPENAI_API_KEY is unset",
]

[tool.coverage.report]
# Single source of truth for the CI no-key coverage floor (split 12). The no-key
# suite sits at ~97%; this floor bites on a real regression without flaking. The
# rigor modules (llm cost paths, metrics/oracle/baselines/frontier, graders) are
# individually ~100% — see PROGRESS.md splits 01–05.
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
